feat: new array type
