# docs/swagger.json
@@ -630,6 +630,20 @@
                 }
             }
         },
+        "domain.ArrayConfig": {
+            "type": "object",
+            "properties": {
+                "max_items": {
+                    "type": "integer"
+                },
+                "min_items": {
+                    "type": "integer"
+                },
+                "unique_items": {
+                    "type": "boolean"
+                }
+            }
+        },
         "domain.CRUDPolicy": {
             "type": "object",
             "properties": {
@@ -714,6 +728,9 @@
                 "type"
             ],
             "properties": {
+                "array_config": {
+                    "$ref": "#/definitions/domain.ArrayConfig"
+                },
                 "computed_by": {
                     "type": "string"
                 },
@@ -726,6 +743,10 @@
                     "items": {
                         "$ref": "#/definitions/domain.Field"
                     }
+                },
+                "is_array": {
+                    "description": "Array Configuration",
+                    "type": "boolean"
                 },
                 "key": {
                     "type": "string"
